--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "`asda`",
   "main": "index.js",
   "scripts": {
-    "dev": "rm -rf dist && webpack --mode development",
+    "dev": "webpack --mode development",
     "build": "webpack --mode production",
     "watch": "npm run dev -- --watch",
-    "start": "webpack serve --mode development"
+    "start": "webpack serve --mode development",
+    "deploy": "npm run build && surge ./dist oioiree.surge.sh"
   },
   "repository": {
     "type": "git",
@@ -20,17 +21,19 @@
     "url": "https://github.com/Kasparsu/ta20elearnwebpack/issues"
   },
   "homepage": "https://github.com/Kasparsu/ta20elearnwebpack#readme",
-  "dependencies": {
-    "node": "^19.4.0"
-  },
   "devDependencies": {
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
+    "simple-nunjucks-loader": "^3.2.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "nunjucks": "^3.2.3",
+    "surge": "^0.23.1"
   }
 }
